[package]
name = "cs2d"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.1", features = ["bevy_sprite"] }
bevy_quinnet = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.1"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"