[package]
name = "protocol"
edition = "2024"
version = "0.1.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
glam = { version = "0.29.3", features = ["serde"] }
# Опциональная зависимость для quinnet‑адаптера
bevy_quinnet = { version = "0.17.0", optional = true }

[features]
default = []
# Чтобы использовать quinnet_adapter и подтянуть bevy_quinnet
quinnet = ["bevy_quinnet"]